--- a/docs_src/package.json
+++ b/docs_src/package.json
@@ -17,48 +17,48 @@
     "build": "gulp dist"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "ajv": "^6.6.2",
-    "ajv-keywords": "^3.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "aos": "^2.3.4",
-    "bootstrap": "^4.2.1",
-    "browser-sync": "^2.26.3",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "bootstrap": "^4.6.1",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "countup.js": "^1.9.3",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "del": "^3.0.0",
     "et-line": "^1.0.1",
     "font-awesome": "^4.7.0",
     "granim": "^2.0.0",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-cache": "^1.1.0",
+    "gulp": "^4.0",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-cache": "^1.1.3",
     "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-file": "^0.4.0",
     "gulp-imagemin": "^5.0.3",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-zip": "^4.2.0",
     "imagesloaded": "^4.1.4",
-    "jarallax": "^1.10.6",
-    "jquery": "^3.3.1",
+    "jarallax": "^1.12.8",
+    "jquery": "^3.6.0",
     "jquery-countdown": "^2.2.0",
     "jquery.photoswipe": "^1.1.1",
-    "lity": "^2.3.1",
+    "lity": "^2.4.1",
     "node-sass-tilde-importer": "^1.0.2",
-    "objectFitPolyfill": "^2.1.1",
-    "popper.js": "^1.14.6",
+    "objectFitPolyfill": "^2.3.5",
+    "popper.js": "^1.16.1",
     "run-sequence": "^2.2.1",
-    "shufflejs": "^5.2.1",
+    "shufflejs": "^5.4.1",
     "slick-carousel": "^1.8.1",
-    "smoothscroll-for-websites": "^1.4.8",
+    "smoothscroll-for-websites": "^1.4.10",
     "themify-icons": "^1.0.0",
-    "typed.js": "^2.0.9",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "typed.js": "^2.0.12",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "waypoints": "^4.0.1",
     "webpack-stream": "^5.2.1"
   },
@@ -68,6 +68,6 @@
   },
   "dependencies": {
     "natives": "^1.1.6",
-    "npm": "^6.5.0"
+    "npm": "^6.14.15"
   }
 }
